# plywright-demo-python

./: .gitignore  .uvrc  LICENSE  README.md  main.py  pyproject.toml  pytest.ini
.github/workflows/: tests.yml
config/: .env.example  settings.py
tests/: conftest.py
tests/api/: __init__.py  test_rest_api.py
tests/api/clients/: api_client.py
tests/fixtures/: conftest.py
tests/ui/: __init__.py  test_html_page.py
tests/ui/pages/: __init__.py  base_page.py  html_page.py
utils/: __init__.py  helpers.py  logger.py
