[project]
name = "plywright-demo-python"
version = "1.0.0"
description = "A comprehensive Playwright Python demo project showcasing UI and API automation with best practices"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Mahmudul Robin", email = "mahmud.h.robin@gmail.com"}
]
keywords = [
    "playwright",
    "automation",
    "testing",
    "ui-automation",
    "api-automation",
    "selenium-alternative",
    "e2e-testing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    "playwright>=1.50.0",
    "pytest==8.3.4",
    "pytest-playwright==0.6.2",
    "pytest-asyncio==0.25.2",
    "requests==2.32.3",
    "python-dotenv==1.0.1",
    "pytest-html==4.1.1",
    "pytest-xdist==3.6.1",
]


[project.optional-dependencies]
dev = [
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/captain-nimo/plywright-demo-python"
Repository = "https://github.com/captain-nimo/plywright-demo-python.git"
Issues = "https://github.com/captain-nimo/plywright-demo-python/issues"
Documentation = "https://github.com/captain-nimo/plywright-demo-python/blob/main/README.md"

[dependency-groups]
dev = [
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "ui: UI automation tests",
    "api: API automation tests",
    "slow: slow running tests",
    "smoke: smoke tests",
]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py313"]

[tool.isort]
profile = "black"
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

